final commit after fullfiling all requirements

--- a/src/components/BlogMain/BlogMain.css
+++ b/src/components/BlogMain/BlogMain.css
@@ -14,6 +14,8 @@
   background: rgba(17, 17, 17, 0.05);
   border-radius: 8px;
   padding: 25px;
+  overflow-y: scroll;
+  max-height: 400px;
 }
 .markedBlogs > h2 {
   font-family: "Exo 2";
